# con

./: .gitignore  CMakeLists.txt  README.md
.uml/: 2.drawio
client/: CMakeLists.txt  Makefile  cmake_install.cmake  main.cpp
client/UI/: MainWindow.qml
client/include/: audio_track.hpp  write_stream.hpp
client/include/pulseaudio/: context.hpp  iface.hpp  mainloop.hpp  real.hpp  stream.cpp  stream.hpp
client/src/: main.cc  voice.cc  voice_record.cc
client/test/: CMakeLists.txt  context.cpp
cmake/: client.cmake  server.cmake
server/: CMakeLists.txt  Makefile  cmake_install.cmake
